# egui-proj

./: .gitignore  Cargo.toml  index.html  mise.toml
assets/: sw.js
config/: hello.ron
src/: app.rs  carditems.rs  main.rs  utils.rs
src/components/: cardbuilder.rs  deckarea.rs  menubar.rs  mod.rs
