[package]
name = "mtg-deckbuilder"
version = "0.1.0"
edition = "2024"
publish = false



[dependencies]
egui-async = "0.4.1"
egui_logger = "0.10.0"
log = "0.4.29"
tokio = { version = "1", features = ["time"] }
egui_dnd = "0.15.0"
reqwest = { version = "0.13.2", features = ["json", "http2"] }
serde = { version = "1", features = ["derive"] }
ron = { version = "0.12.1" }
url = { version = "2.5.8", features = ["serde"] }
image = { version = "0.25", features = ["jpeg", "png"] } # include desired formats
directories = "5"
exr = "1.74.0" # pin to fix dep issues
# Alt allocators
spinning_top = "0.3.0"

[dependencies.eframe]
version = "0.34.1"
default-features = false
features = [
    "accesskit", "default_fonts", "wayland", "x11", "wgpu",
    "ron",
    "persistence"
]

[dependencies.egui]
version = "0.34.1"
features = ["persistence", "serde"]

[dependencies.egui_extras]
version = "0.34.1"
default-features = false
features = ["image"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = { version = "0.1.48", optional = true }
talc = { version = "5.0.3", optional = true }


[features]
default = ["mimalloc"]
talc = ["dep:talc"]
mimalloc = ["dep:mimalloc"]
